// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActionBar /> should add shadow and gutters 1`] = `
<div
  className="gYdIYG"
/>
`;

exports[`<ActionBar /> should omit shadow and gutters 1`] = `
<div
  className="eGTslT"
/>
`;

exports[`<BottomActionBar /> should add shadow and gutters 1`] = `
<div
  className="fQNkTf"
/>
`;

exports[`<BottomActionBar /> should omit shadow and gutters 1`] = `
<div
  className="feLxGg"
/>
`;
